--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -1,6 +1,8 @@
-<div class="row">
-  <div class="col-4">
     <form class="user" (ngSubmit)="onSubmit(f)" #f="ngForm">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">BlueTweet</h4>
+          <p class="card-description"> Bienvenido! </p>
       <div class="form-group">
         <input
           type="email"
@@ -24,9 +26,8 @@
           placeholder="Password"
         />
       </div>
-      <button type="submit" class="btn btn-primary btn-block botonbonito" [disabled]="!f.valid">
-        Login
-      </button>
+          <button type="submit" class="btn btn-success mr-2" (submit)="onSubmit(f)" [disabled]="!f.valid">Iniciar sesión</button>
+        </div>
+      </div>
     </form>
-  </div>
-</div>
+
