--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -1,5 +1,5 @@
     <form class="user" (ngSubmit)="onSubmit(f)" #f="ngForm">
-      <div class="card">
+      <div class="card" style="width: 30rem">
         <div class="card-body">
           <h4 class="card-title">BlueTweet</h4>
           <p class="card-description"> Bienvenido! </p>
@@ -26,7 +26,9 @@
           placeholder="Password"
         />
       </div>
-          <button type="submit" class="btn btn-success mr-2" (submit)="onSubmit(f)" [disabled]="!f.valid">Iniciar sesión</button>
+          <div>  <button type="submit" class="btn btn-success mr-2" (submit)="onSubmit(f)" [disabled]="!f.valid">Iniciar sesión</button></div>
+         <div> <a href="#" class="stretched-link">Crear cuenta nueva</a> </div>
+          <div> <a href="#" class="stretched-link">¿Has olvidado tu contraseña?</a> </div>
         </div>
       </div>
     </form>
