--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -1,5 +1,6 @@
+<body>
 <form class="user" (ngSubmit)="onSubmit(f)" #f="ngForm">
-  <div class="card" style="width: 30rem">
+  <div class="card">
     <div class="card-body">
       <h4 class="card-title">BlueTweet</h4>
       <p class="card-description"> Bienvenido! </p>
@@ -38,5 +39,5 @@
     </div>
   </div>
 </form>
-
+</body>
 
