--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" class="bg-gradient-primary">
+<html lang="en">
 
 <head>
 
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-primary">
 
   <div class="container">
 
