Cambio de imagen de inicio de sesion

--- a/proyecto/src/app/login/login.component.css
+++ b/proyecto/src/app/login/login.component.css
@@ -5,3 +5,7 @@
   background-color:#4e73df;
 }
 
+.bg-login-image {
+  background: url(https://www.familyhandyman.com/wp-content/uploads/2019/06/BNBbyc17_johnPizniur.jpg);
+  background-size: cover;
+}
