Fix errores de pruebas

--- a/proyecto/src/app/home/home.component.html
+++ b/proyecto/src/app/home/home.component.html
@@ -64,7 +64,7 @@
   </div>
   <div class="col-6">
     <app-file-uploader
-      [author]="this.author"
+      [attr.author]="this.author"
       (imagePick)="onImagePicked($event)"
     ></app-file-uploader>
   </div>
