Fix bug color de fondo login

--- a/proyecto/src/app/app.component.html
+++ b/proyecto/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main role="main" class="container" style="padding-top:100px;">
+<main role="main">
   <!-- Banner con mensajes -->
   <app-notification></app-notification>
 
