--- a/proyecto/src/app/registrar-usuario/registrar-usuario.component.css
+++ b/proyecto/src/app/registrar-usuario/registrar-usuario.component.css
@@ -4,3 +4,7 @@
   background: url(https://www.familyhandyman.com/wp-content/uploads/2019/06/BNBbyc17_johnPizniur.jpg);
   background-size: cover;
 }
+
+.bg-gradient-primary {
+  height: 100vh;
+}
