--- a/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
+++ b/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
@@ -1,25 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>SB Admin 2 - Register</title>
-
-  <!-- Custom fonts for this template-->
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-  <!-- Custom styles for this template-->
-
-
-</head>
-
-<body class="bg-primary">
+<div class="bg-gradient-primary">
 
   <div class="container">
 
@@ -53,7 +33,7 @@
                     <input type="password" class="form-control form-control-user" formControlName="password" required placeholder="Contraseña">
                   </div>
                   <div class="col-sm-6">
-                    <input type="password" class="form-control form-control-user" formControlName="confirmPassword" required placeholder="Vuelva a ingresar la contraseña">
+                    <input type="password" class="form-control form-control-user" formControlName="confirmPassword" required placeholder="Repita la contraseña">
                   </div>
                 </div>
                 <button href="login" class="btn btn-primary btn-user btn-block" [disabled]="!registerForm.valid" (click)="onSubmit()">
@@ -87,6 +67,6 @@
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
 
-</body>
+</div>
 
-</html>
+
