--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -52,7 +52,7 @@
                     <a class="small" >¿Olvidaste tu contraseña?</a>
                   </div>
                   <div class="text-center">
-                    <a class="small" >¡Crear una cuenta nueva!</a>
+                    <a href="registro" class="small" >¡Crear una cuenta nueva!</a>
                   </div>
                 </div>
               </div>
