--- a/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
+++ b/proyecto/src/app/registrar-usuario/registrar-usuario.component.html
@@ -44,7 +44,7 @@
               <hr>
 
               <div class="text-center">
-                <a class="small" href="forgot-password.html">¿Olvidaste tu contraseña?</a>
+                <a class="small" >¿Olvidaste tu contraseña?</a>
               </div>
               <div class="text-center">
                 <a class="small" href="login">¿Ya tienes una cuenta? ¡Inicia sesión!</a>
