--- a/proyecto/src/app/app.component.html
+++ b/proyecto/src/app/app.component.html
@@ -1,10 +1,10 @@
-<app-wrapper></app-wrapper>
+<app-wrapper><router-outlet></router-outlet></app-wrapper>
 
 <!-- Banner con mensajes -->
 <app-notification></app-notification>
 
 <!-- AQUI SE EXPANDE LA VISTA DEL COMPONENTE -->
-<router-outlet></router-outlet>
+
 
 <!-- El spinner que espera cuando creo un post-->
 <ngx-spinner
