--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -267,6 +267,9 @@
     </nav>
     <!-- End of Topbar -->
   </div>
+  <div class="container-fluid">
+  <router-outlet></router-outlet>
+  </div>
 
 </div>
-<router-outlet></router-outlet>
+
