Últimos detalles finalizados

--- a/proyecto/src/app/wrapper/wrapper.component.html
+++ b/proyecto/src/app/wrapper/wrapper.component.html
@@ -1,16 +1,17 @@
 <!-- Page Wrapper -->
 <div id="wrapper">
   <!-- Sidebar -->
-  <app-sidebar class="sidebar">
-
-  </app-sidebar>
+  <app-sidebar class="sidebar"> </app-sidebar>
   <!-- End of Sidebar -->
 
   <!-- Content Wrapper -->
-  <app-content-wrapper class="topbar" [userData]="userData" [isLoggedIn]="isLoggedIn"></app-content-wrapper>
+  <app-content-wrapper
+    class="topbar"
+    [userData]="userData"
+    [isLoggedIn]="isLoggedIn"
+  ></app-content-wrapper>
   <!-- End of Content Wrapper -->
 </div>
-
 <!-- End of Page Wrapper -->
 
 <!-- Scroll to Top Button-->
