--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -1,4 +1,4 @@
-<div id="content-wrapper" >
+<div id="content-wrapper">
   <!-- Main Content -->
   <div id="content" *ngIf="isLoggedIn">
     <!-- Topbar -->
@@ -266,10 +266,17 @@
       </ul>
     </nav>
     <!-- End of Topbar -->
-  </div>
-  <div class="container-fluid">
-  <router-outlet></router-outlet>
-  </div>
 
+    <div class="container-fluid">
+      <!-- Content Expand -->
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+  <footer class="sticky-footer bg-white">
+    <div class="container my-auto">
+      <div class="copyright text-center my-auto">
+        <span>Copyright © Your Website 2019</span>
+      </div>
+    </div>
+  </footer>
 </div>
-
