Arreglos solicitados por SonarCloud corregidos

--- a/proyecto/src/app/home/home.component.html
+++ b/proyecto/src/app/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="table-wrapper-scroll-y my-custom-scrollbar">
-
-  <table class="table table-bordered table-striped">
+  <table class="table table-bordered table-striped" summary="Tweets from users.">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -90,5 +89,4 @@
       </tr>
     </tbody>
   </table>
-
 </div>
