--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -5,7 +5,7 @@
     <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
       <!-- Sidebar Toggle (Topbar) -->
       <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-        <i class="fa fa-bars"></i>
+        <em class="fa fa-bars"></em>
       </button>
 
       <!-- Topbar Search -->
@@ -22,7 +22,7 @@
           />
           <div class="input-group-append">
             <button class="btn btn-primary" type="button">
-              <i class="fas fa-search fa-sm"></i>
+              <em class="fas fa-search fa-sm"></em>
             </button>
           </div>
         </div>
@@ -41,7 +41,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            <i class="fas fa-search fa-fw"></i>
+            <em class="fas fa-search fa-fw"></em>
           </a>
           <!-- Dropdown - Messages -->
           <div
@@ -59,7 +59,7 @@
                 />
                 <div class="input-group-append">
                   <button class="btn btn-primary" type="button">
-                    <i class="fas fa-search fa-sm"></i>
+                    <em class="fas fa-search fa-sm"></em>
                   </button>
                 </div>
               </div>
@@ -78,7 +78,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            <i class="fas fa-bell fa-fw"></i>
+            <em class="fas fa-bell fa-fw"></em>
             <!-- Counter - Alerts -->
             <span class="badge badge-danger badge-counter">3+</span>
           </a>
@@ -93,7 +93,7 @@
             <a class="dropdown-item d-flex align-items-center" href="#">
               <div class="mr-3">
                 <div class="icon-circle bg-primary">
-                  <i class="fas fa-file-alt text-white"></i>
+                  <em class="fas fa-file-alt text-white"></em>
                 </div>
               </div>
               <div>
@@ -104,7 +104,7 @@
             <a class="dropdown-item d-flex align-items-center" href="#">
               <div class="mr-3">
                 <div class="icon-circle bg-success">
-                  <i class="fas fa-donate text-white"></i>
+                  <em class="fas fa-donate text-white"></em>
                 </div>
               </div>
               <div>
@@ -115,7 +115,7 @@
             <a class="dropdown-item d-flex align-items-center" href="#">
               <div class="mr-3">
                 <div class="icon-circle bg-warning">
-                  <i class="fas fa-exclamation-triangle text-white"></i>
+                  <em class="fas fa-exclamation-triangle text-white"></em>
                 </div>
               </div>
               <div>
@@ -138,7 +138,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            <i class="fas fa-envelope fa-fw"></i>
+            <em class="fas fa-envelope fa-fw"></em>
             <!-- Counter - Messages -->
             <span class="badge badge-danger badge-counter">7</span>
           </a>
@@ -237,7 +237,11 @@
             <span class="mr-2 d-none d-lg-inline text-gray-600 small"
               >{{ this.userData.fullName }} ({{ this.userData.userName }})</span
             >
-            <img class="img-profile rounded-circle" [src]="this.userData.img" />
+            <img
+              class="img-profile rounded-circle"
+              alt="Profile picture."
+              [src]="this.userData.img"
+            />
           </a>
           <!-- Dropdown - User Information -->
           <div
@@ -245,20 +249,20 @@
             aria-labelledby="userDropdown"
           >
             <a class="dropdown-item" href="#">
-              <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+              <em class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></em>
               Profile
             </a>
             <a class="dropdown-item" href="#" style="display: none;">
-              <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+              <em class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></em>
               Settings
             </a>
             <a class="dropdown-item" href="#" style="display: none;">
-              <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+              <em class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></em>
               Activity Log
             </a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-              <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+              <em class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></em>
               Logout
             </a>
           </div>
