--- a/proyecto/src/app/sidebar/sidebar.component.html
+++ b/proyecto/src/app/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
   <!-- Sidebar - Brand -->
   <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
     <div class="sidebar-brand-icon rotate-n-15">
-      <i class="fas fa-crow"></i>
+      <em class="fas fa-crow"></em>
     </div>
     <div class="sidebar-brand-text mx-3">BlueTweet</div>
   </a>
@@ -17,7 +17,7 @@
   <!-- Nav Item - Home -->
   <li class="nav-item active">
     <a class="nav-link" href="index.html">
-      <i class="fas fa-fw fa-home"></i>
+      <em class="fas fa-fw fa-home"></em>
       <span>Home</span></a
     >
   </li>
@@ -25,7 +25,7 @@
   <!-- Nav Item - Profile -->
   <li class="nav-item">
     <a class="nav-link" href="charts.html">
-      <i class="fas fa-fw fa-user"></i>
+      <em class="fas fa-fw fa-user"></em>
       <span>Profile</span></a
     >
   </li>
@@ -43,7 +43,7 @@
       data-target="#exampleModal"
     >
       <span class="icon text-gray-600">
-        <i class="fas fa-plus"></i>
+        <em class="fas fa-plus"></em>
       </span>
       <span class="text">Tweet</span>
     </button>
