Fix luego de merge

--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -250,7 +250,7 @@
           >
             <a class="dropdown-item" href="#">
               <em class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></em>
-              Profile
+              Perfil
             </a>
             <a class="dropdown-item" href="#" style="display: none;">
               <em class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></em>
@@ -263,7 +263,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
               <em class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></em>
-              Logout
+              Cerrar sesión
             </a>
           </div>
         </li>
@@ -271,16 +271,10 @@
     </nav>
     <!-- End of Topbar -->
 
-    <div class="container-fluid">
-      <!-- Content Expand -->
-      <router-outlet></router-outlet>
-    </div>
+
   </div>
-  <footer class="sticky-footer bg-white">
-    <div class="container my-auto">
-      <div class="copyright text-center my-auto">
-        <span>Copyright © Your Website 2019</span>
-      </div>
-    </div>
-  </footer>
+
+    <!-- Content Expand -->
+    <router-outlet></router-outlet>
+
 </div>
