--- a/proyecto/src/app/wrapper/wrapper.component.html
+++ b/proyecto/src/app/wrapper/wrapper.component.html
@@ -1,7 +1,7 @@
 <!-- Page Wrapper -->
 <div id="wrapper">
   <!-- Sidebar -->
-  <app-sidebar class="sidebar"> </app-sidebar>
+  <app-sidebar class="sidebar" *ngIf="isLoggedIn"> </app-sidebar>
   <!-- End of Sidebar -->
 
   <!-- Content Wrapper -->
@@ -31,17 +31,17 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Cerrar sesión</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
       <div class="modal-body">
-        Select "Logout" below if you are ready to end your current session.
+       Selecciona salir si estas seguro de querer cerrar sesión.
       </div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <button class="btn btn-primary" (click)="logout()">Logout</button>
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+        <button class="btn btn-primary" data-dismiss="modal" (click)="logout()">Salir</button>
       </div>
     </div>
   </div>
