--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -248,7 +248,7 @@
             class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
             aria-labelledby="userDropdown"
           >
-            <a class="dropdown-item" href="#">
+            <a class="dropdown-item" [routerLink]="['/author']" [queryParams]="{authorName: this.userData.userName}">
               <em class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></em>
               Perfil
             </a>
