--- a/proyecto/src/app/sidebar/sidebar.component.html
+++ b/proyecto/src/app/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
 
   <!-- Nav Item - Home -->
   <li class="nav-item active">
-    <a class="nav-link" href="index.html">
+    <a class="nav-link" [routerLink]="['/home']">
       <em class="fas fa-fw fa-home"></em>
       <span>Home</span></a
     >
@@ -23,7 +23,7 @@
 
   <!-- Nav Item - Profile -->
   <li class="nav-item">
-    <a class="nav-link" href="charts.html">
+    <a class="nav-link" [routerLink]="['/author']" [queryParams]="{authorName: this.userData.userName}">
       <em class="fas fa-fw fa-user"></em>
       <span>Profile</span></a
     >
