Creación de página donde se muestra el perfil de usuario y su información

--- a/proyecto/src/app/home/home.component.html
+++ b/proyecto/src/app/home/home.component.html
@@ -1,12 +1,104 @@
-
-<!-- Page Heading -->
-<h1 class="h3 mb-2 text-gray-800">Home</h1>
-
-<!-- DataTales Example -->
-<div class="card shadow mb-4">
-  <div class="card-header py-3">
-    <h6 class="m-0 font-weight-bold text-primary">Example</h6>
-
+<div class="container-fluid">
+  <div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">Home</h1>
   </div>
-  <div class="card-body"></div>
+
+  <div class="row">
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
+                <img
+                  class="img-profile rounded-circle mr-2"
+                  alt="Profile picture."
+                  src="https://picsum.photos/50/50.jpg"
+                />
+                User (@username)
+              </div>
+              <div class="text-gray-800">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
+                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
+                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
+                accumsan lorem sed, vulputate.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
+                <img
+                  class="img-profile rounded-circle mr-2"
+                  alt="Profile picture."
+                  src="https://picsum.photos/50/50.jpg"
+                />
+                User (@username)
+              </div>
+              <div class="text-gray-800">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
+                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
+                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
+                accumsan lorem sed, vulputate.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
+                <img
+                  class="img-profile rounded-circle mr-2"
+                  alt="Profile picture."
+                  src="https://picsum.photos/50/50.jpg"
+                />
+                User (@username)
+              </div>
+              <div class="text-gray-800">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
+                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
+                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
+                accumsan lorem sed, vulputate.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
+                <img
+                  class="img-profile rounded-circle mr-2"
+                  alt="Profile picture."
+                  src="https://picsum.photos/50/50.jpg"
+                />
+                User (@username)
+              </div>
+              <div class="text-gray-800">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
+                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
+                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
+                accumsan lorem sed, vulputate.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
