--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -1,32 +1,150 @@
-<div class="row">
-  <div class="col-12">
-    <h1>Publicaciones de {{ this.authorName }}</h1>
+<div class="container-fluid">
+  <div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">Publicaciones de {{ this.authorName }}</h1>
   </div>
-  <div class="col-12">
-    <table class="table table-bordered" width="100%" cellspacing="0">
-      <thead>
-        <tr>
-          <th>Key</th>
-          <th>Fecha</th>
-          <th>Autor</th>
-          <th>Título</th>
-          <th>Contenido</th>
-          <th>Img</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let post of posts">
-          <td>{{ post.key }}</td>
-          <td>{{ post.creationDate | date: 'medium' }}</td>
-          <!-- <td>{{ post.author }}</td> -->
-          <td>
-            <a routerLink="/author/{{ post.author }}">{{ post.author }}</a>
-          </td>
-          <td>{{ post.title }}</td>
-          <td>{{ post.content }}</td>
-          <td><img [src]="post.img" style="width:100px;" alt="imagen" /></td>
-        </tr>
-      </tbody>
-    </table>
+
+  <div class="row">
+    <div class="col-lg-3">
+      <!-- Basic Card Example -->
+      <div class="card shadow mb-4">
+        <div class="card-header py-3">
+          <h6 class="m-0 font-weight-bold text-primary">Basic Card Example</h6>
+        </div>
+        <div class="card-body">
+          The styling for this basic card example is created by using default Bootstrap utility classes. By using utility classes, the style of the card component can be easily modified with no need for any custom CSS!
+        </div>
+      </div>
+
+    </div>
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
+                <img
+                  class="img-profile rounded-circle mr-2"
+                  alt="Profile picture."
+                  src="https://picsum.photos/50/50.jpg"
+                />
+                User (@username)
+              </div>
+              <div class="text-gray-800">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
+                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
+                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
+                accumsan lorem sed, vulputate.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
+                <img
+                  class="img-profile rounded-circle mr-2"
+                  alt="Profile picture."
+                  src="https://picsum.photos/50/50.jpg"
+                />
+                User (@username)
+              </div>
+              <div class="text-gray-800">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
+                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
+                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
+                accumsan lorem sed, vulputate.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
+                <img
+                  class="img-profile rounded-circle mr-2"
+                  alt="Profile picture."
+                  src="https://picsum.photos/50/50.jpg"
+                />
+                User (@username)
+              </div>
+              <div class="text-gray-800">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
+                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
+                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
+                accumsan lorem sed, vulputate.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
+                <img
+                  class="img-profile rounded-circle mr-2"
+                  alt="Profile picture."
+                  src="https://picsum.photos/50/50.jpg"
+                />
+                User (@username)
+              </div>
+              <div class="text-gray-800">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
+                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
+                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
+                accumsan lorem sed, vulputate.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="col-12">
+      <h1>Publicaciones de {{ this.authorName }}</h1>
+    </div>
+    <div class="col-12">
+      <table class="table table-bordered" width="100%" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Fecha</th>
+            <th>Autor</th>
+            <th>Título</th>
+            <th>Contenido</th>
+            <th>Img</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let post of posts">
+            <td>{{ post.key }}</td>
+            <td>{{ post.creationDate | date: 'medium' }}</td>
+            <!-- <td>{{ post.author }}</td> -->
+            <td>
+              <a routerLink="/author/{{ post.author }}">{{ post.author }}</a>
+            </td>
+            <td>{{ post.title }}</td>
+            <td>{{ post.content }}</td>
+            <td><img [src]="post.img" style="width:100px;" alt="imagen" /></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
 </div>
