--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Publicaciones de {{ this.authorName }}</h1>
+    <h1 class="h3 mb-0 text-gray-800">Publicaciones de {{ this.user.userName }}</h1>
   </div>
 
   <div class="row">
@@ -11,7 +11,8 @@
           <h6 class="m-0 font-weight-bold text-primary">Basic Card Example</h6>
         </div>
         <div class="card-body">
-          The styling for this basic card example is created by using default Bootstrap utility classes. By using utility classes, the style of the card component can be easily modified with no need for any custom CSS!
+         {{this.user.fullName}}
+         {{this.user.userName}}
         </div>
       </div>
 
@@ -116,7 +117,7 @@
 
   <div class="row">
     <div class="col-12">
-      <h1>Publicaciones de {{ this.authorName }}</h1>
+      <h1>Publicaciones de {{ this.user.userName }}</h1>
     </div>
     <div class="col-12">
       <table class="table table-bordered" width="100%" cellspacing="0">
