--- a/proyecto/src/app/home/home.component.html
+++ b/proyecto/src/app/home/home.component.html
@@ -1,12 +1,6 @@
 
-<!-- Page Heading -->
-<h1 class="h3 mb-2 text-gray-800">Home</h1>
-
-<!-- DataTales Example -->
 <div class="card shadow mb-4">
-  <div class="card-header py-3">
-    <h6 class="m-0 font-weight-bold text-primary">Example</h6>
-
+  <div class="card-body">
+    <app-crear-publicacion></app-crear-publicacion>
   </div>
-  <div class="card-body"></div>
 </div>
