Cambio botón subir imagen y mensajes de notificación

--- a/proyecto/src/app/file-uploader/file-uploader.component.html
+++ b/proyecto/src/app/file-uploader/file-uploader.component.html
@@ -1,4 +1,5 @@
 <button class="btn btn-danger" (click)="onUploadImage()">
-  Subir imagen {{ this.uploadStatus }}
+  <em class="fas fa-fw fa-image"></em>
+   {{ this.uploadStatus }}
 </button>
 <input type="file" accept="image/jpeg" #filePicker (change)="onFileChosen($event)" hidden />
