errores bugs y code smells

--- a/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
@@ -5,6 +5,7 @@
       src="
       https://firebasestorage.googleapis.com/v0/b/proyectoazul-dc9d3.appspot.com/o/bluebird.png?alt=media&token=7aa091e7-fa7c-4c70-9d3f-b09b92ae5fa6
       "
+      alt="Logo bluetweet"
       style="max-height: 100px; max-width: 100px;"
     />
 
