--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -1,4 +1,4 @@
-<div id="content-wrapper">
+<div id="content-wrapper" class="d-flex flex-column">
   <!-- Main Content -->
   <div id="content" *ngIf="isLoggedIn">
     <!-- Topbar -->
@@ -270,8 +270,6 @@
       </ul>
     </nav>
     <!-- End of Topbar -->
-
-
   </div>
 
     <!-- Content Expand -->
