Correciones en textos de ejemplo para que SonarCloud no brinque porque todos son iguales y son necesarios de momento para ver cómo se ven publicaciones

--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -36,10 +36,9 @@
                   User (@username)
                 </div>
                 <div class="text-gray-800">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
-                  bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
-                  Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
-                  accumsan lorem sed, vulputate.
+                  duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula
+                  ipsum a arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris
+                  pellentesque pulvinar
                 </div>
               </div>
             </div>
@@ -60,10 +59,10 @@
                   User (@username)
                 </div>
                 <div class="text-gray-800">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
-                  bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
-                  Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
-                  accumsan lorem sed, vulputate.
+                  diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque
+                  eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada bibendum
+                  arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales ut eu sem
+                  integer vitae
                 </div>
               </div>
             </div>
@@ -84,10 +83,9 @@
                   User (@username)
                 </div>
                 <div class="text-gray-800">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
-                  bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
-                  Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
-                  accumsan lorem sed, vulputate.
+                  quam id leo in vitae turpis massa sed elementum tempus egestas sed sed risus
+                  pretium quam vulputate dignissim suspendisse in est ante in nibh mauris cursus
+                  mattis molestie a iaculis at
                 </div>
               </div>
             </div>
@@ -108,10 +106,9 @@
                   User (@username)
                 </div>
                 <div class="text-gray-800">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
-                  bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
-                  Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
-                  accumsan lorem sed, vulputate.
+                  arcu odio ut sem nulla pharetra diam sit amet nisl suscipit adipiscing bibendum
+                  est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo
+                  quis imperdiet massa tincidunt nunc pulvinar sapien
                 </div>
               </div>
             </div>
