--- a/proyecto/src/app/home/home.component.html
+++ b/proyecto/src/app/home/home.component.html
@@ -42,10 +42,8 @@
                 User (@username)
               </div>
               <div class="text-gray-800">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
-                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
-                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
-                accumsan lorem sed, vulputate.
+                vitae justo eget magna fermentum iaculis eu non diam phasellus vestibulum lorem sed
+                risus ultricies tristique nulla aliquet enim tortor at auctor urna nunc id
               </div>
             </div>
           </div>
@@ -66,10 +64,9 @@
                 User (@username)
               </div>
               <div class="text-gray-800">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
-                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
-                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
-                accumsan lorem sed, vulputate.
+                ipsum dolor sit amet consectetur adipiscing elit ut aliquam purus sit amet luctus
+                venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non enim
+                praesent elementum facilisis leo vel fringilla
               </div>
             </div>
           </div>
@@ -90,10 +87,9 @@
                 User (@username)
               </div>
               <div class="text-gray-800">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ligula
-                bibendum, ultricies orci vel, tincidunt arcu. Ut eu mattis quam, quis congue nunc.
-                Vestibulum quis tellus aliquam leo tristique mollis. Ut auctor turpis auctor,
-                accumsan lorem sed, vulputate.
+                nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus
+                urna neque viverra justo nec ultrices dui sapien eget mi proin sed libero enim sed
+                faucibus
               </div>
             </div>
           </div>
