--- a/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/proyecto/src/app/crear-publicacion/crear-publicacion.component.html
@@ -1,4 +1,4 @@
-<div class="card w-50  mx-auto d-block">
+<div class="card w-50  mx-auto d-block" id="mainCard">
   <div class="card-body">
     <img
       class="img-fluid mx-auto d-block"
