--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -19,6 +19,12 @@
             </div>
             <div class="h5 mt-4 font-weight-bold text-gray-800 text-center">Following: X.XXX</div>
             <div class="h5 mt-2 font-weight-bold text-gray-800 text-center">Followers: X.XXX</div>
+            <div class="text-center">
+              <app-editar-informacion-modal
+                *ngIf="user"
+                [userData]="this.user"
+              ></app-editar-informacion-modal>
+            </div>
           </div>
         </div>
       </div>
@@ -114,39 +120,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-12">
-        <h1>Publicaciones de {{ this.user.userName }}</h1>
-      </div>
-      <div class="col-12">
-        <table class="table table-bordered" width="100%" cellspacing="0">
-          <thead>
-            <tr>
-              <th>Key</th>
-              <th>Fecha</th>
-              <th>Autor</th>
-              <th>Título</th>
-              <th>Contenido</th>
-              <th>Img</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let post of posts">
-              <td>{{ post.key }}</td>
-              <td>{{ post.creationDate | date: 'medium' }}</td>
-              <!-- <td>{{ post.author }}</td> -->
-              <td>
-                <a routerLink="/author/{{ post.author }}">{{ post.author }}</a>
-              </td>
-              <td>{{ post.title }}</td>
-              <td>{{ post.content }}</td>
-              <td><img [src]="post.img" style="width:100px;" alt="imagen" /></td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </div>
   </div>
