--- a/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
+++ b/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
@@ -16,7 +16,7 @@
       <div class="modal-body">
 <div class="imagen">
   <div class="text-center">
-    <img src="fileurl" class="rounded img-fluid" >
+    <img src="{{fileUrl}}" class="rounded img-fluid" >
   </div>
   <button class="btn btn-danger" (click)="onUploadImage()">
     Subir Archivo {{ this.uploadStatus }}
