Creación de la página y componente que muestra el perfil de un usuario, su información y sus publicaciones recientes
Importante revisar las pruebas

--- a/proyecto/src/app/publicacion/publicacion.component.html
+++ b/proyecto/src/app/publicacion/publicacion.component.html
@@ -1,26 +1,22 @@
-<div class="col-xl-3 col-md-6 mb-4">
-  <div class="card border-left-primary shadow h-100 py-2">
-    <div class="card-body">
-      <div class="row no-gutters align-items-center">
-        <div class="col">
-          <div class="rounded-circle image">
-            <img
-              class="img img-responsive full-width"
-              alt="Profile picture."
-              src="{{ this.userData.img }}"
-            />
-          </div>
-          <div class="text-xs font-weight-bold text-primary text-uppercase mb-3">
-            {{ this.userData.fullName }} (@{{ this.userData.userName }})
-          </div>
-          <div class="text-gray-800">
-            {{ this.postData.content }}
-            <div *ngIf="this.postData.img != null && this.postData.img != ''">
-              <img class="img" src="{{ this.postData.img }}" alt="Post image." />
-            </div>
-          </div>
-        </div>
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <div class="rounded-circle image mb-2">
+      <img
+        class="img img-responsive full-width"
+        alt="Profile picture."
+        src="{{ this.userData.img }}"
+      />
+    </div>
+    <h6 class="m-0 font-weight-bold text-primary">
+      <div class="text-xs font-weight-bold text-primary text-uppercase">
+        {{ this.userData.fullName }} (@{{ this.userData.userName }})
       </div>
+    </h6>
+  </div>
+  <div class="card-body">
+    {{ this.postData.content }}
+    <div *ngIf="this.postData.img != null && this.postData.img != ''">
+      <img class="img rounded mt-2" src="{{ this.postData.img }}" alt="Post image." />
     </div>
   </div>
 </div>
