--- a/proyecto/src/app/author/author.component.css
+++ b/proyecto/src/app/author/author.component.css
@@ -1,8 +1,12 @@
 .image {
   position: relative;
   overflow: hidden;
-  padding-bottom: 100%;
+  width: 70%;
+  margin: auto;
+  padding-bottom: 70%;
 }
 .image img {
   position: absolute;
+  width: auto;
+  height: 100%;
 }
