Implementación recuperar contraseña

--- a/proyecto/src/app/registrar-usuario/registrar-usuario.component.css
+++ b/proyecto/src/app/registrar-usuario/registrar-usuario.component.css
@@ -1,7 +1,7 @@
 
 
 .bg-register-image {
-  background: url(https://www.familyhandyman.com/wp-content/uploads/2019/06/BNBbyc17_johnPizniur.jpg);
+  background: url(https://firebasestorage.googleapis.com/v0/b/proyectoazul-dc9d3.appspot.com/o/pajarito.jpg?alt=media&token=44f48fef-1811-42d1-9a82-a0b6453a218b);
   background-size: cover;
 }
 
