--- a/proyecto/src/app/recuperar-password/recuperar-password.component.css
+++ b/proyecto/src/app/recuperar-password/recuperar-password.component.css
@@ -1,9 +1,8 @@
-
-.bg-login-image {
+.bg-password-image {
   background: url(https://firebasestorage.googleapis.com/v0/b/proyectoazul-dc9d3.appspot.com/o/pajarito.jpg?alt=media&token=44f48fef-1811-42d1-9a82-a0b6453a218b);
   background-size: cover;
 }
 
 .bg-gradient-primary {
-  height: 100vh;
+height: 100vh;
 }
