--- a/proyecto/src/app/recuperar-password/recuperar-password.component.html
+++ b/proyecto/src/app/recuperar-password/recuperar-password.component.html
@@ -38,10 +38,10 @@
                   </form>
                   <hr />
                   <div class="text-center">
-                    <a class="small" routerLink="['/registro']">¡Crear una cuenta nueva!</a>
+                    <a class="small" routerLink="/registro">¡Crear una cuenta nueva!</a>
                   </div>
                   <div class="text-center">
-                    <a class="small" routerLink="['/login']"
+                    <a class="small" routerLink="/login"
                       >¿Ya tienes una cuenta? ¡Inicia sesión!</a
                     >
                   </div>
