--- a/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
+++ b/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
@@ -6,7 +6,7 @@
   data-target="#exampleModalCenter"
 >
   <span class="icon text-white-50">
-    <i class="fas fa-edit"></i>
+    <em class="fas fa-edit"></em>
   </span>
   <span class="text">Editar información</span>
 </button>
