--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -21,7 +21,7 @@
           <div class="text-center">
             <!-- User is visiting his profile -->
             <app-editar-informacion-modal
-              *ngIf="userConsultingHisPersonalProfile; else elseFollowButton"
+              *ngIf="userConsultingHisPersonalProfile && user; else elseFollowButton"
               [userData]="this.user"
             ></app-editar-informacion-modal>
             <!-- User is visiting another user profile -->
