--- a/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
+++ b/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
@@ -98,7 +98,7 @@
             <div class="col-sm-10">
               <label class="label" for="newPasword">Nueva contraseña </label>
               <input
-                type="text"
+                type="password"
                 class="form-control form-control-user"
                 formControlName="newPassword"
                 id="newPassword"
