--- a/proyecto/src/app/author/author.component.html
+++ b/proyecto/src/app/author/author.component.html
@@ -16,8 +16,13 @@
               [src]="this.user.img"
             />
           </div>
-          <div class="h5 mt-4 font-weight-bold text-gray-800 text-center">Following: X.XXX</div>
-          <div class="h5 mt-2 font-weight-bold text-gray-800 text-center">Followers: X.XXX</div>
+          <div class="text-center my-3">
+            <!-- Following -->
+            <div><app-users-list [listType]="listFollowing"></app-users-list></div>
+            <!-- Followers -->
+            <div><app-users-list [listType]="listFollowers"></app-users-list></div>
+          </div>
+          <!-- Button Edit|Follow|Unfollow -->
           <div class="text-center">
             <!-- User is visiting his profile -->
             <app-editar-informacion-modal
