--- a/proyecto/src/app/users-list/users-list.component.html
+++ b/proyecto/src/app/users-list/users-list.component.html
@@ -3,7 +3,7 @@
   type="button"
   class="btn btn-primary btn-icon-split mb-1"
   data-toggle="modal"
-  data-target="#users-list"
+  [attr.data-target]="listType ? '#users-list-' + listType.toString().toLowerCase() : ''"
 >
   <span class="icon text-white-50">
     10
@@ -14,22 +14,34 @@
 <!-- Modal -->
 <div
   class="modal fade"
-  id="users-list"
+  [attr.id]="listType ? 'users-list-' + listType.toString().toLowerCase() : ''"
   tabindex="-1"
   role="dialog"
-  aria-labelledby="exampleModalLabel"
+  [attr.aria-labelledby]="
+    listType ? '#users-list-' + listType.toString().toLowerCase() + '-modal' : ''
+  "
   aria-hidden="true"
 >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">{{ listType }}</h5>
+        <h5
+          class="modal-title"
+          [id]="listType ? '#users-list-' + listType.toString().toLowerCase() + '-modal' : ''"
+        >
+          {{ listType }}
+        </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <!-- Users list -->
+        <tbody>
+          <tr *ngFor="let user of this.users">
+            <td>{{ user.userName }}</td>
+          </tr>
+        </tbody>
       </div>
     </div>
   </div>
